--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "inquirer": "^7.1.0",
+    "mysql": "^2.18.1",
     "util": "^0.12.2"
   }
 }
